Dignbuild (#25)
* WIP load map and create game instance. slight refactor block handling

* fix dwarf oversight

* load up map and basic init. block breaking.

* load blocks and handle block placement

* announce ore events and no respawn after ore die

* add orientation anchor markers

* DNB win condition and anti stall

* add LoadedChunkTracker

* nerf dignbuild tool attack damage and implement block regen cooldown

* load, spawn and give status ores

* framework for status ore item redemption, various improvements & optimizations

* add PotionEffectManager

* lolololol

* BuildingSelector fixes

* bug fixes and performance improvements

* fix npe and demo void invuln bug

* stop demo putting mines in nbz

* cool no build zone effect & fix building restrictions

* sidebar

* fix dangerous spawn

* allow dropping status ores and stop spectators picking up items

* load team chests, spawn pointmarker, access control

* anti-stall timers in sidebar & other sidebar changes

* WIP dnb place items in team chest, final commit for dnb

---------

Co-authored-by: jacky <jacky8399@protonmail.com>